StudentService ErroCode use